PROJECT(ashunt C)

SET(BUILD_STRING "generic")
FIND_PACKAGE(LibGeoIP)
FIND_PACKAGE(Threads)
IF (LIBGEOIP_FOUND AND CMAKE_HAVE_PTHREAD_CREATE)
	ADD_EXECUTABLE(${PROJECT_NAME}	../xmalloc.c
					../xio.c
					../xsys.c
					../xstring.c
					../tprintf.c
					../aslookup.c
					../bpf.c
					../mtrand.c
					../ring_rx.c
					../ashunt.c)
	ADD_DEFINITIONS(-DPROGNAME_STRING="${PROJECT_NAME}"
			-DVERSION_STRING="${VERSION}"
			-DBUILD_STRING="${BUILD_STRING}")
	ADD_CUSTOM_COMMAND(
		SOURCE ../../ashunt.c
		COMMAND pod2man
		ARGS -s 8 ../../ashunt.c ${CMAKE_CURRENT_BINARY_DIR}/ashunt.8
		OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/ashunt.8
	)
	ADD_CUSTOM_TARGET(ashunt.8 ALL
		DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/ashunt.8
	)
	TARGET_LINK_LIBRARIES(ashunt ${LIBGEOIP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
	INSTALL(FILES ../conf/whois.conf DESTINATION ${CONFIG_INSTALL_PATH})
	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/ashunt.8 DESTINATION share/man/man8)
	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${EXECUTABLE_INSTALL_PATH})
ELSE (LIBGEOIP_FOUND AND CMAKE_HAVE_PTHREAD_CREATE)
	MESSAGE("libgeoip is missing on target. Skipping ${PROJECT_NAME} build.")
ENDIF (LIBGEOIP_FOUND AND CMAKE_HAVE_PTHREAD_CREATE)

