PROJECT(bpfc C)

SET(BUILD_STRING "generic")
FIND_PACKAGE(FLEX)
FIND_PACKAGE(BISON)

IF (FLEX_FOUND AND BISON_FOUND)
	FLEX_TARGET(BPF_LEXER ../bpf_lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c)
	BISON_TARGET(BPF_PARSER ../bpf_parser.y ${CMAKE_CURRENT_BINARY_DIR}/bpf_parser.tab.c)
	ADD_EXECUTABLE(${PROJECT_NAME} 	../xmalloc.c
					../xstring.c
					../bpf.c
					${FLEX_BPF_LEXER_OUTPUTS}
					${BISON_BPF_PARSER_OUTPUT_SOURCE}
					../bpfc.c)
	ADD_DEFINITIONS(-DPROGNAME_STRING="${PROJECT_NAME}"
			-DVERSION_STRING="${VERSION}"
			-DBUILD_STRING="${BUILD_STRING}")
	ADD_CUSTOM_COMMAND(
		SOURCE ../../bpfc.c
		COMMAND pod2man
		ARGS -s 8 ../../bpfc.c ${CMAKE_CURRENT_BINARY_DIR}/bpfc.8
		OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/bpfc.8
	)
	ADD_CUSTOM_TARGET(bpfc.8 ALL
		DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/bpfc.8
	)
	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/bpfc.8 DESTINATION share/man/man8)
	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${EXECUTABLE_INSTALL_PATH})
ELSE (FLEX_FOUND AND BISON_FOUND)
	MESSAGE("either flex or bison is missing on target. Skipping ${PROJECT_NAME} build.")
ENDIF (FLEX_FOUND AND BISON_FOUND)

