PROJECT(flowtop C)

SET(BUILD_STRING "generic")

FIND_PACKAGE(LibGeoIP)
FIND_PACKAGE(Threads)
FIND_PACKAGE(Curses)
FIND_PACKAGE(LibNetFilterConnTrack)

IF(CURSES_FOUND AND CMAKE_HAVE_PTHREAD_CREATE AND LIBGEOIP_FOUND AND NETFILTER_CONNTRACK_FOUND)
	ADD_EXECUTABLE(${PROJECT_NAME}	../xmalloc.c
					../strlcpy.c
					../parser.c
					../hash.c
					../dissector_eth.c
					../dissector.c
					../tprintf.c
					../flowtop.c)

	ADD_DEFINITIONS(-DPROGNAME_STRING="${PROJECT_NAME}"
			-DVERSION_STRING="${VERSION}"
			-DBUILD_STRING="${BUILD_STRING}")

	TARGET_LINK_LIBRARIES(flowtop ${CURSES_NCURSES_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${NETFILTER_CONNTRACK_LIBRARY} ${LibGeoIP_LIBRARY})
	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${EXECUTABLE_INSTALL_PATH})
	INSTALL(FILES 	../conf/oui.conf
			../conf/udp.conf
			../conf/tcp.conf
			../conf/ether.conf
		DESTINATION ${CONFIG_INSTALL_PATH})
ELSE(CURSES_FOUND AND CMAKE_HAVE_PTHREAD_CREATE AND LIBGEOIP_FOUND AND NETFILTER_CONNTRACK_FOUND)
	MESSAGE("Either ncurses, pthread, libGeoIP or netfilter_conntrack is missing on target. Skipping ${PROJECT_NAME} build.")
ENDIF(CURSES_FOUND AND CMAKE_HAVE_PTHREAD_CREATE AND LIBGEOIP_FOUND AND NETFILTER_CONNTRACK_FOUND)
