PROJECT(ifpps C)

SET(BUILD_STRING "generic")
FIND_PACKAGE(Curses)

IF(CURSES_FOUND)
	ADD_EXECUTABLE(${PROJECT_NAME}	../xmalloc.c
					../xio.c
					../xsys.c
					../xstring.c
					../ifpps.c)
	ADD_DEFINITIONS(-DPROGNAME_STRING="${PROJECT_NAME}"
			-DVERSION_STRING="${VERSION}"
			-DBUILD_STRING="${BUILD_STRING}")
	ADD_CUSTOM_COMMAND(
		SOURCE ../../ifpps.c
		COMMAND pod2man
		ARGS -s 8 ../../ifpps.c ${CMAKE_CURRENT_BINARY_DIR}/ifpps.8
		OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/ifpps.8
	)
	ADD_CUSTOM_TARGET(ifpps.8 ALL
		DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/ifpps.8
	)
	TARGET_LINK_LIBRARIES(ifpps ${CURSES_NCURSES_LIBRARY})
	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/ifpps.8 DESTINATION share/man/man8)
	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${EXECUTABLE_INSTALL_PATH})
ELSE(CURSES_FOUND)
	MESSAGE("ncurses is missing on target. Skipping ${PROJECT_NAME} build.")
ENDIF(CURSES_FOUND)

