rulesdir = $(sysconfdir)/$(package)/rules
rules_DATA = all_traffic.bpf \
	     arp.bpf \
	     atalk.bpf \
	     broadcast.bpf \
	     ftp.bpf \
	     http.bpf \
	     icmp.bpf \
	     imap.bpf \
	     ip_broadcast.bpf \
	     ip_multicast.bpf \
	     multicast.bpf \
	     pop3.bpf \
	     rarp.bpf \
	     rsync.bpf \
	     skype_pre.bpf \
	     smtp.bpf \
	     ssh.bpf \
	     vlan1000.bpf

EXTRA_DIST = $(rules_DATA)
